# vc-intrinsics

./: .gitignore  CMakeLists.txt  Readme.md
.github/workflows/: on-pr-update.yml
GenXIntrinsics/: CMakeLists.txt
GenXIntrinsics/cmake/: utils.cmake
GenXIntrinsics/docs/: GenXLangRef.rst  LangRefIndex.rst  Makefile.sphinx  ReadMe.txt  conf.py
GenXIntrinsics/include/llvm/: CMakeLists.txt
GenXIntrinsics/include/llvm/GenXIntrinsics/: CMakeLists.txt  ConfigureVersionFile.cmake  GenXIntrOpts.h  GenXIntrinsicInst.h  GenXIntrinsics.h  GenXMetadata.h  GenXSPIRVReaderAdaptor.h  GenXSPIRVWriterAdaptor.h  GenXSimdCFLowering.h  GenXVersion.h  Intrinsic_definitions.py  Intrinsics.py
GenXIntrinsics/include/llvmVCWrapper/ADT/: None.h  Optional.h  StringRef.h
GenXIntrinsics/include/llvmVCWrapper/Analysis/: InstructionSimplify.h
GenXIntrinsics/include/llvmVCWrapper/IR/: .DerivedTypes.h.swp  Attributes.h  DerivedTypes.h  Function.h  GlobalValue.h  GlobalVariable.h  InstrTypes.h  Instructions.h  Intrinsics.h  Type.h
GenXIntrinsics/include/llvmVCWrapper/Support/: Alignment.h
GenXIntrinsics/lib/: CMakeLists.txt
GenXIntrinsics/lib/GenXIntrinsics/: AdaptorsCommon.cpp  AdaptorsCommon.h  CMakeLists.txt  GenXIntrinsics.cpp  GenXMetadata.cpp  GenXRestoreIntrAttr.cpp  GenXSPIRVReaderAdaptor.cpp  GenXSPIRVWriterAdaptor.cpp  GenXSimdCFLowering.cpp  GenXSingleElementVectorUtil.cpp  GenXSingleElementVectorUtil.h  GenXVersion.cpp
GenXIntrinsics/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  replicate_mask_masked_gather4.ll  update_mask_masked_gather4.ll
GenXIntrinsics/test/Adaptors/: addr_conv_attribute_writer.ll  annot_mess_writer.ll  annotated_args_mixed_reader.ll  annotated_args_no_conv_ptrtoint_reader.ll  annotated_args_no_conv_reader.ll  annotated_args_no_conv_writer.ll  annotated_args_reader.ll  annotated_args_writer.ll  args_attributes_transform_reader.ll  args_attributes_transform_writer.ll  combined_args_reader.ll  combined_args_writer.ll  empty_kernel_writer.ll  fun_attributes_transform_reader.ll  image_array_reader.ll  image_array_writer.ll  media_block_reader.ll  media_block_writer.ll  no_kernels_module_reader.ll  no_kernels_module_writer.ll  no_vcfunction_reader.ll  non_global_ptr_reader.ll  old_decorated_args_reader.ll  plain_args_reader.ll  plain_args_writer.ll  sev_calling_conv_reader.ll  sev_calling_conv_writer.ll  sev_ptr_reader.ll  sev_ptr_writer.ll  sev_signature_reader.ll  sev_signature_writer.ll  sev_struct.ll  spirv_friendly_types_reader.ll  surface_access_reader.ll  surface_access_writer.ll  unknown_arg_reader.ll  unknown_arg_writer.ll
GenXIntrinsics/test/Adaptors/opaque_ptrs/: addr_conv_attribute_writer.ll  annot_mess_writer.ll  annotated_args_mixed_reader.ll  annotated_args_no_conv_ptrtoint_reader.ll  annotated_args_no_conv_reader.ll  annotated_args_no_conv_writer.ll  annotated_args_reader.ll  annotated_args_writer.ll  args_attributes_transform_reader.ll  args_attributes_transform_writer.ll  combined_args_reader.ll  combined_args_writer.ll  image_array_reader.ll  image_array_writer.ll  media_block_reader.ll  media_block_writer.ll  non_global_ptr_reader.ll  plain_args_reader.ll  plain_args_writer.ll  sev_ptr_reader.ll  sev_ptr_writer.ll  sev_signature_reader.ll  sev_signature_writer.ll  sev_struct.ll  surface_access_reader.ll  surface_access_writer.ll
GenXIntrinsics/test/Plugin/: CMakeLists.txt  Plugin.cpp
GenXIntrinsics/test/SimdCFLowering/: bitcast_between_wrrs.ll  predicate_masked_gather.ll  replicate_mask.ll  replicate_mask_masked_gather4.ll  update_mask_masked_gather4.ll
GenXIntrinsics/test/SimdCFLowering/opaque_ptrs/: bitcast_between_wrrs.ll  predicate_masked_gather.ll  replicate_mask.ll  replicate_mask_masked_gather4.ll  update_mask_masked_gather4.ll
GenXIntrinsics/unittests/: CMakeLists.txt
GenXIntrinsics/unittests/GenXIntrinsics/: CMakeLists.txt  GenXIntrinsicsTest.cpp
